[project]
name = "chat-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore>=1.9.0",
    "strands-agents>=1.38.0",
    "strands-agents-tools>=0.5.2",
    "langgraph>=1.1.10",
    "langchain-aws>=1.4.6",
    "langchain-community==0.4.1",
    "langchain-text-splitters==1.1.2",
    "faiss-cpu>=1.13.2",
]
